--- a/eia.css
+++ b/eia.css
@@ -35,11 +35,13 @@ p.kei img{
 p.inst img{
   width: 30%;
   height: 30%;
+  border-radius: 10px;
 }
 
 p.nasu img{
   width: 30%;
   height: 30%;
+  border-radius: 30px;
 }
 
 .name{
